--- a/public/css/new.css
+++ b/public/css/new.css
@@ -181,6 +181,11 @@ textarea {
     display: block;
 }
 
+/* audio block */
+.audio .download-button {
+    display: none;
+}
+
 /* draw block */
 
 .draw {
