--- a/public/views/fragments/header.ejs
+++ b/public/views/fragments/header.ejs
@@ -1,8 +1,6 @@
-<pre style="display: none" id="root"><%= root %></pre>
-
 <header>
-    <a href="<%= root %>">untitled social</a>
-    <a href="<%= root %>new" class="new-post-button">+</a>
+    <a href="/">untitled social</a>
+    <a href="/new" class="new-post-button">+</a>
     <div class="grow">for us</div>
-    <a href="<%= root %>posts" class="index-button">i</a>
+    <a href="/posts" class="index-button">i</a>
 </header>
