--- a/public/views/fragments/global-head.ejs
+++ b/public/views/fragments/global-head.ejs
@@ -1,8 +1,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<link rel="manifest" href="<%= root %>manifest.json" />
-<link rel="icon" type="image/png" href="<%= root %>res/icons/32x32.png">
-<link rel="stylesheet" href="<%= root %>css/global.css">
-<link rel="stylesheet" href="<%= root %>css/responsive.css">
-<link rel="apple-touch-icon" sizes="192x192" href="<%= root %>res/icons/192x192.png">
-<link rel="apple-touch-icon" sizes="512x512" href="<%= root %>res/icons/512x512.png">
+<link rel="manifest" href="/manifest.json" />
+<link rel="icon" type="image/png" href="/res/icons/32.png">
+<link rel="stylesheet" href="/css/global.css">
+<link rel="stylesheet" href="/css/responsive.css">
+<link rel="apple-touch-icon" sizes="192x192" href="/res/icons/192.png">
+<link rel="apple-touch-icon" sizes="512x512" href="/res/icons/512.png">
+
+<script src="/js/app.js"></script>
