--- a/public/views/new.ejs
+++ b/public/views/new.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="<%= root %>css/post.css">
+    <link rel="stylesheet" href="/css/post.css">
     <%- include ('fragments/global-head.ejs') %>
-    <link rel="stylesheet" href="<%= root %>css/new.css">
+    <link rel="stylesheet" href="/css/new.css">
     <title>+ new post</title>
 </head>
 <body>
@@ -99,14 +99,14 @@
                             <td>
                                 <% if (replying_to.body == '') { %>
                                     replying to
-                                    <a href="<%= root %>posts/<%= replying_to.path %>">a shout</a>
+                                    <a href="/posts/<%= replying_to.path %>">a shout</a>
                                     by 
-                                    <a href="<%= root %>posts/<%= replying_to.path %>"><em><%= replying_to.author %></em></a>...
+                                    <a href="/posts/<%= replying_to.path %>"><em><%= replying_to.author %></em></a>...
                                 <% } else { %>
                                     replying to
-                                    <a href="<%= root %>posts/<%= replying_to.path %>">this post</a>
+                                    <a href="/posts/<%= replying_to.path %>">this post</a>
                                     by 
-                                    <a href="<%= root %>posts/<%= replying_to.author_path %>"><em><%= replying_to.author %></em></a>...
+                                    <a href="/posts/<%= replying_to.author_path %>"><em><%= replying_to.author %></em></a>...
                                 <% } %>
                             </td>
                         </tr>
@@ -114,8 +114,8 @@
                             <tr>
                                 <td>re:</td>
                                 <td>
-                                    <a href="<%= root %>posts/<%= replying_to.replying_to.path %>"><%= replying_to.replying_to.title %></a>
-                                    <span>by <a href="<%= root %>posts/<%= replying_to.replying_to.author_path %>"><%= replying_to.replying_to.author %></a></span>
+                                    <a href="/posts/<%= replying_to.replying_to.path %>"><%= replying_to.replying_to.title %></a>
+                                    <span>by <a href="/posts/<%= replying_to.replying_to.author_path %>"><%= replying_to.replying_to.author %></a></span>
                                 </td>
                             </tr>
                         <% } %>
@@ -189,7 +189,7 @@
     <template id="rec-block-template">
         <div class="rec block">
             <div class="wrapper">
-                <img src="<%= root %>res/microphone.png">
+                <img src="/res/microphone.png">
                 <div class="time">0:00</div>
                 <button>stop</button>
             </div>
@@ -201,8 +201,8 @@
         <div class="draw block" data-type="image">
             <canvas width="300" height="300"></canvas>
             <div class="buttons">
-                <button class="pencil"><img src="<%= root %>res/pencil.png" alt="pencil" title="pencil"></button>
-                <button class="eraser"><img src="<%= root %>res/eraser.png" alt="eraser" title="eraser"></button>
+                <button class="pencil"><img src="/res/pencil.png" alt="pencil" title="pencil"></button>
+                <button class="eraser"><img src="/res/eraser.png" alt="eraser" title="eraser"></button>
             </div>
             <%- include('fragments/post-options.ejs') %>
         </div>
@@ -224,8 +224,8 @@
     
 </body>
 
-<script src="<%= root %>js/post.js"></script>
-<script src="<%= root %>js/postbuilder.js"></script>
+<script src="/js/post.js"></script>
+<script src="/js/postbuilder.js"></script>
 <script>
     treat_posts();
 </script>
