service worker caching

--- a/public/css/new.css
+++ b/public/css/new.css
@@ -215,6 +215,9 @@ textarea {
     border-style: solid;
 }
 
+.draw.upload-complete .buttons {
+    display: none;
+}
 .draw canvas.drawing {
     border-style: solid;
 }
