--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <%- include ('fragments/global-head.ejs') %>
     <title>untitled social</title>
