--- a/public/css/global.css
+++ b/public/css/global.css
@@ -118,7 +118,7 @@ input[type="range"]::-moz-range-thumb {
 
 input[type="range"]::-webkit-slider-thumb,
 input[type="range"]::-moz-range-thumb {
-    background-color: white;
+    background: white;
     height: 1rem;
     width: 1rem;
     border-radius: 50%;
