--- a/public/views/fragments/global-head.ejs
+++ b/public/views/fragments/global-head.ejs
@@ -1,5 +1,5 @@
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="manifest" href="/manifest.json" />
 <link rel="icon" type="image/png" href="/res/icons/32.png">
 <link rel="stylesheet" href="/css/global.css">
