--- a/public/views/home.ejs
+++ b/public/views/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="/css/post.css">
     <%- include ('fragments/global-head.ejs') %>
