--- a/public/views/post.ejs
+++ b/public/views/post.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="/css/post.css">
     <link rel="stylesheet" href="/css/index.css">
