--- a/public/css/global.css
+++ b/public/css/global.css
@@ -7,7 +7,7 @@
 
     --post-bg: rgb(250, 250, 250);
     --post-border: black;
-    --album-bg: var(--theme-color);
+    --album-bg: black;
 }
 
 body, html {
