--- a/public/views/new.ejs
+++ b/public/views/new.ejs
@@ -224,6 +224,7 @@
     
 </body>
 
+<script src="/js/lib/heic2any.min.js"></script>
 <script src="/js/post.js"></script>
 <script src="/js/postbuilder.js"></script>
 <script>
