--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,5 @@
 .indexed-post {
+    background: var(--post-bg);
     border: 1px solid var(--post-border);
     padding: 2px 1em;
     display: flex;
