--- a/public/views/fragments/post-options.ejs
+++ b/public/views/fragments/post-options.ejs
@@ -1,5 +1,5 @@
 <div class="options">
     <button onclick="this.parentElement.parentElement.remove()">x</button>
-    <button onclick="var b=this.parentElement.parentElement; if (b.previousElementSibling) b.previousElementSibling.before(b)">↑</button>
-    <button onclick="var b=this.parentElement.parentElement; if (b.nextElementSibling) b.nextElementSibling.after(b)">↓</button>
+    <button onclick="var b=this.parentElement.parentElement; if (b.previousElementSibling) b.previousElementSibling.before(b)">▲</button>
+    <button onclick="var b=this.parentElement.parentElement; if (b.nextElementSibling) b.nextElementSibling.after(b)">▼</button>
 </div>
