--- a/public/views/new.ejs
+++ b/public/views/new.ejs
@@ -28,10 +28,10 @@
 
             <div class="buttonbar">
                 <span>+</span>
-                <button onclick="add_post_block('text')">text</button>
-                <button onclick="add_post_block('upload')">file(s)</button>
-                <button onclick="add_post_block('rec')">rec</button>
-                <button onclick="add_post_block('draw')">draw</button>
+                <button onclick="add_post_block('text')" alt="add text block" title="add text block">text</button>
+                <button onclick="add_post_block('upload')" alt="add files" title="add files">file(s)</button>
+                <button onclick="add_post_block('rec')" alt="record audio" title="record audio">record</button>
+                <button onclick="add_post_block('draw')" alt="add doodle" title="add doodle">doodle</button>
                 <span class="grow"></span>
                 <button onclick="confirm_dialog.showModal()">post!</button>
             </div>
