--- a/public/views/home.ejs
+++ b/public/views/home.ejs
@@ -97,6 +97,10 @@
                     <pre>   </pre>
                 <% } %>
             </nav>
+
+            <div>
+                <a onclick="subscribe()">get notifications</a>
+            </div>
         </footer>
     </div>
     
@@ -105,6 +109,8 @@
 <script src="/js/post.js"></script>
 <script>
     treat_posts();
+
+    // share button on mobile
 
     window.mobileAndTabletCheck = function() {
         let check = false;
@@ -117,6 +123,31 @@
         for (let a of share_anchors) {
             a.onclick = navigator.share({ url: a.href });
             a.href = "";
+        }
+    }
+
+    // enable push notifications
+    async function subscribe() {
+        let service_worker = await navigator.serviceWorker.ready;
+        let push = await service_worker.pushManager.subscribe({
+            userVisibleOnly: true,
+            applicationServerKey: 'BL2l-t4IJf73pZL9wd_SJ1SNQJ0wdB84KJ1L9Dzki8-NGRQtJNGmeH5HBWAyQaAPDSkaMU30TSb54aR8EI9lasU'
+        });
+
+        let form = new FormData();
+        form.append("data", JSON.stringify(push));
+
+        let result = await fetch('/subscribe', {
+            method: 'POST',
+            body: form
+        })
+        .then(res => res.json())
+        .catch(err => console.log(err))
+
+        if (result) {
+            console.log(result);
+        } else {
+            alert("error subscribing to push notifications--try again later?");
         }
     }
 </script>
