--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -14,21 +14,27 @@
 
     <%- include('fragments/header.ejs')  %>
 
-    <main class="posts-list">
-        <% for (let i=0; i<posts.length; i++) { %>
-            <% let post = posts[i] %>
-
-            <div class="indexed-post">
-                <span><%= posts.length - i %></span>
-                <a class="title" href="/posts/<%= post.path %>">
-                    <%= post.title %>
-                </a>
-                <a style="white-space: pre" href="/posts/<%= post.author_path %>"><em><%= post.author %></em></a>
-                <span title="<%= post.timestamp %>"><%= post.date %></span>
-            </div>
-        <% } %>
+    <main>
+        <div class="posts-list">
+            <% for (let i=0; i<posts.length; i++) { %>
+                <% let post = posts[i] %>
+    
+                <div class="indexed-post">
+                    <span><%= posts.length - i %></span>
+                    <a class="title" href="/posts/<%= post.path %>">
+                        <%= post.title %>
+                    </a>
+                    <a style="white-space: pre" href="/posts/<%= post.author_path %>"><em><%= post.author %></em></a>
+                    <span title="<%= post.timestamp %>"><%= post.date %></span>
+                </div>
+            <% } %>
+        </div>
     </main>
     
 </body>
+
+<script>
+    
+</script>
 
 </html>
