--- a/public/css/new.css
+++ b/public/css/new.css
@@ -12,7 +12,7 @@ main:has(.post) > div:first-child {
 }
 
 details p, details table {
-    font-size: .8em;
+    font-size: smaller;
 }
 details summary, details th {
     font-family: monospace;
