--- a/public/views/new.ejs
+++ b/public/views/new.ejs
@@ -42,7 +42,7 @@
 
             <p>
                 <details>
-                    <summary>formatting tips</summary>
+                    <summary>[?] formatting tips</summary>
                     <p>hello. here are some ways to spice up your text.</p>
                     <table>
                         <tr>
