--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -15,9 +15,8 @@
     <%- include('fragments/header.ejs')  %>
 
     <main>
+        <div><%- title %></div>
         <div class="posts-list">
-            <div><%- title %> (<%= posts.length %>)</div>
-            
             <% for (let i=0; i<posts.length; i++) { %>
                 <% let post = posts[i] %>
     
