--- a/public/css/global.css
+++ b/public/css/global.css
@@ -25,6 +25,10 @@ body, html {
     display: none;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    line-height: 1em;
+}
+
 details summary {
     cursor: pointer;
     text-decoration: dotted underline;
