--- a/public/views/new.ejs
+++ b/public/views/new.ejs
@@ -33,7 +33,7 @@
                 <span>+</span>
                 <button onclick="add_post_block('text')" alt="add text block" title="add text block">text</button>
                 <button onclick="this.nextElementSibling.click()" alt="add media file(s)" title="add media file(s)">media</button>
-                    <input type="file" name="file" multiple="multiple" onchange="add_files(this.files)">
+                    <input id="file-input" type="file" name="file" multiple="multiple">
                 <button onclick="add_post_block('rec')" alt="record audio" title="record audio">record</button>
                 <button onclick="add_post_block('draw')" alt="doodle something" title="doodle something">doodle</button>
                 <span class="grow"></span>
