--- a/public/views/home.ejs
+++ b/public/views/home.ejs
@@ -165,6 +165,7 @@
         install_button.textContent = "install on your phone";
         install_button.href = "/how-to-install";
         install_button.onclick = null;
+        install_prompt = null;
     }
 </script>
 
