--- a/public/views/home.ejs
+++ b/public/views/home.ejs
@@ -108,8 +108,9 @@
             </nav>
 
             <div class="flex">
-                <a tabindex="0" onclick="subscribe()">get notifications</a>
+                <a id="subscription-anchor" class="hidden" tabindex="0">get notifications</a>
                 <a id="app-install-anchor" tabindex="0" href="/how-to-install">install on your phone</a>
+                <span>v0.0</span>
             </div>
         </footer>
     </div>
@@ -165,6 +166,37 @@
         install_button.href = "/how-to-install";
         install_button.onclick = null;
         install_prompt = null;
+    }
+
+    // enable push notifications
+
+    if (window.Notification) {
+        var subscribe_button = document.getElementById("subscription-anchor");
+        subscribe_button.onclick = subscribe;
+    }
+
+    async function subscribe() {
+        let service_worker = await navigator.serviceWorker.ready;
+        let push = await service_worker.pushManager.subscribe({
+            userVisibleOnly: true,
+            applicationServerKey: 'BL2l-t4IJf73pZL9wd_SJ1SNQJ0wdB84KJ1L9Dzki8-NGRQtJNGmeH5HBWAyQaAPDSkaMU30TSb54aR8EI9lasU'
+        });
+
+        let form = new FormData();
+        form.append("data", JSON.stringify(push));
+
+        let result = await fetch('/subscribe', {
+            method: 'POST',
+            body: form
+        })
+        .then(res => res.json())
+        .catch(err => console.log(err))
+
+        if (result) {
+            console.log(result);
+        } else {
+            alert("error subscribing to push notifications--try again later?");
+        }
     }
 </script>
 
