--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -30,6 +30,9 @@
                 </div>
             <% } %>
         </div>
+        <% if (posts.length == 0) { %>
+            <p><i>zero posts to index!</i></p>
+        <% } %>
     </main>
     
 </body>
